# DOOM-Remake

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Makefile-old  README.md  compile_commands.json  imgui.ini  main.cpp  notes  raylib-fix.ps1  raylib-fix.sh  setup-file-tree.ps1
.cache/clangd/index/: AudioDevice.hpp.BB739DE924756DAA.idx  AudioStream.hpp.71D0BD3CA3B33CE8.idx  BoundingBox.hpp.ACE5DF36CD7A35CD.idx  Camera2D.hpp.9760E17F3A1BC56F.idx  Camera3D.hpp.BF663A95EA24DB8A.idx  Color.hpp.549D816B24BD7D4C.idx  Font.hpp.168AC8261C36589F.idx  Functions.hpp.B4C4353B86E869E3.idx  Gamepad.hpp.473933ABA9E4C62E.idx  Image.hpp.7636BD5DB0FEE1FB.idx  Material.hpp.6045265B4062F5A0.idx  Matrix.hpp.C547FAC47383C061.idx  Mesh.hpp.80C347244610CDC2.idx  Model.hpp.CCABD871FC1011A2.idx  ModelAnimation.hpp.034ED550622CE676.idx  Mouse.hpp.6BDEA90B5420D97A.idx  Music.hpp.22E84D07724E3CF2.idx  Ray.hpp.3B0D707752B60F32.idx  RayCollision.hpp.3950C6A7643BE22C.idx  RaylibException.hpp.99C0E6E0E080ECB8.idx  Rectangle.hpp.9D4FDC89FE3C11CD.idx  RenderTexture.hpp.0E5DA542796F4F2E.idx  Shader.hpp.221670A55DDB162C.idx  Sound.hpp.026FF773DAC931CA.idx  Text.hpp.44ED647B2A65ADF6.idx  Texture.hpp.25D0B3D41D83F904.idx  TextureUnmanaged.hpp.68647C23D53D4D4C.idx  Touch.hpp.581B62459B0D02D9.idx  Vector2.hpp.C8AF8B7012DD9E49.idx  Vector3.hpp.6F9960625DB04A3D.idx  Vector4.hpp.2F174AB54D3B52F8.idx  VrStereoConfig.hpp.B62386196C133A21.idx  Wave.hpp.60413F072DCB16AA.idx  Window.hpp.BF9000A125286621.idx  capulus_engine.cpp.25A905DD44DEDD5B.idx  capulus_engine.hpp.9E212679A6474706.idx  main.cpp.915603BD7B30D15D.idx  raylib-cpp-utils.hpp.8EC87A9FFB03AA41.idx  raylib-cpp.hpp.8A0B684EDED31BC2.idx  raylib.h.9AA6C480B27AF509.idx  (+7 more)
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: .test.h  brick.h  checkerboard.h  door.h  map.txt  ppm_to_h.py
assets/aseprite_raws/: character.aseprite  character_full.aseprite  floor.aseprite  ground.aseprite  pig.aseprite  selection.aseprite  tilemap.aseprite  wall.aseprite
assets/data/: sheet_info.json
assets/raws/: test.ppm
assets/saves/: generated.txt
classes_to_be_readded/: player.cpp  tilemap.cpp
engine/: capulus_engine.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp
engine/components/: animated_sprite.cpp  animated_sprite.hpp  ce_components.hpp  ce_sprite.cpp  ce_sprite.hpp  hitbox.cpp  hitbox.hpp  icomponent.hpp  player_controller.cpp  player_controller.hpp  transform.hpp
scripts/: setup-file-tree.sh
src/: Isle.cpp  Isle.hpp  TODO  bevy-example.txt  camera.cpp  camera.hpp  capulus_engine.cpp  capulus_engine.hpp  game.cpp  game.hpp  main.cpp  main.rs  model.cpp  model.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp  tilemap.cpp  tilemap.hpp  wad_data.cpp  wad_data.hpp  wad_reader.cpp  wad_reader.hpp
src/components/: component.hpp  gameobject.cpp  gameobject.hpp  hitbox.cpp  hitbox.hpp  level.rs  mod.rs  pig.rs  tile.rs
src/controller/: controller.cpp  controller.hpp
src/engine/: capulus_engine.cpp  capulus_engine.hpp  debug_menu.cpp  debug_menu.hpp  map_renderer.cpp  map_renderer.hpp  player.cpp  player.hpp
src/entities/: player.cpp  player.hpp  tilemap.cpp  tilemap.hpp
src/game/: IsleGame.hpp  testObj.cpp  testObj.hpp
src/lib/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLSharedTargets-release.cmake  SFMLStaticTargets-debug.cmake  SFMLStaticTargets.cmake
src/model/: model.cpp  model.hpp  settings.cpp  settings.hpp
src/plugins/: debug.rs  interactions.rs  level.rs  map.rs  mob.rs  mod.rs  pig.rs  player.rs  rapier_example.rs  sheet_info.json  tilemap.rs
src/resources/: mod.rs  money.rs
src/systems/: level_systems.rs  mod.rs  pig_systems.rs  player_systems.rs  startup_systems.rs
src/tests/: animation_tests.rs  level_tests.rs  mod.rs
src/view/: main_menu.cpp  main_menu.hpp  map_test.cpp  map_test.hpp  view.cpp  view.hpp
src/wad_classes/: data_types.hpp  wad_data.cpp  wad_data.hpp  wad_reader.cpp  wad_reader.hpp
test/: CMakeLists.txt  doomTests.cpp
