[package]
name = "the_isle"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.19.0"
bevy_rapier2d = "0.22.0"
rand = "0.8.5"
serde = "1.0.189"
serde_json = "1.0.107"
